if (IN_SOURCE_BUILD MATCHES YES)                                                                                                                                                                                                                                        
        include_directories(../)
        include_directories(../../../../Common)
        include_directories(../../ThirdParty)
        file(GLOB_RECURSE basic_types_lib_SOURCES "*.cpp")
else ()
        include_directories(../../../Sources)
        include_directories(../../../../Common)
        include_directories(../../../Sources/ThirdParty)
        file(GLOB_RECURSE basic_types_lib_SOURCES "../../../Sources/SharedLib/BasicTypesLib/*.cpp")
endif()

add_library(${BASIC_TYPES_LIB} STATIC ${basic_types_lib_SOURCES})

set_target_properties(${BASIC_TYPES_LIB} PROPERTIES PREFIX "")
