if (IN_SOURCE_BUILD MATCHES YES)                                                                                                                                                                                                                                        
        include_directories(../)
        include_directories(../../../../Common)
        include_directories(../../ThirdParty)
		include_directories(../../SharedLib/BasicTypesLib)
        file(GLOB_RECURSE dptf_types_lib_SOURCES "*.cpp")
else ()
        include_directories(../../../Sources)
        include_directories(../../../../Common)
        include_directories(../../../Sources/ThirdParty)
		include_directories(../../../Sources/SharedLib/BasicTypesLib)
        file(GLOB_RECURSE dptf_types_lib_SOURCES "../../../Sources/SharedLib/DptfTypesLib/*.cpp")
endif()

add_library(${DPTF_TYPES_LIB} STATIC ${dptf_types_lib_SOURCES})

set_target_properties(${DPTF_TYPES_LIB} PROPERTIES PREFIX "")
