if (IN_SOURCE_BUILD MATCHES YES)                                                                                                                                                                                                                                        
        include_directories(../)
        include_directories(../../../../Common)
        include_directories(../../ThirdParty)
		include_directories(../../SharedLib/BasicTypesLib)
        file(GLOB_RECURSE xml_lib_SOURCES "*.cpp")
else ()
        include_directories(../../../Sources)
        include_directories(../../../../Common)
        include_directories(../../../Sources/ThirdParty)
		include_directories(../../../Sources/SharedLib/BasicTypesLib)
        file(GLOB_RECURSE xml_lib_SOURCES "../../../Sources/SharedLib/XmlLib/*.cpp")
endif()

add_library(${XML_LIB} STATIC ${xml_lib_SOURCES})

set_target_properties(${XML_LIB} PROPERTIES PREFIX "")
