if (IN_SOURCE_BUILD MATCHES YES)                                                                                                                                                                                                                                        
	include_directories(..)
	include_directories(../EsifInclude)
	include_directories(../ThirdParty)
	include_directories(../SharedLib/SharedLib)
	include_directories(../PolicyLib/PolicyLib)
else ()
	include_directories(../../Sources)
	include_directories(../../Sources/EsifInclude)
	include_directories(../../Sources/ThirdParty)
	include_directories(../../Sources/SharedLib/SharedLib)
	include_directories(../../Sources/PolicyLib/PolicyLib)
endif()

add_subdirectory(CriticalPolicy)
add_subdirectory(ActivePolicy)
add_subdirectory(PassivePolicy)
