if (IN_SOURCE_BUILD MATCHES YES)                                                                                                                                                                                                                                        
        include_directories(..)
        include_directories(../EsifInclude)
        include_directories(../ThirdParty)
else ()
        include_directories(../../Sources)
        include_directories(../../Sources/EsifInclude)
        include_directories(../../Sources/ThirdParty)
endif()

add_subdirectory(SharedLib)
